test_data/Xml/Unexpected/Unserializable/InvalidClassName/annotatedRelationshipElement/wrong.xml.exception
Expected an element representing an instance of class AnnotatedRelationshipElement with element name annotatedRelationshipElement, but got: utterlyInvalid at: the beginning